--- a/template1/Jenkinsfile
+++ b/template1/Jenkinsfile
@@ -4,7 +4,7 @@ pipeline {
     stages {
         stage('Checkout') {
             steps {
-                echo "pulling ......"
+                echo "pulling ........."
 		git changelog: false, poll: false, url: 'https://github.com/Unikoli/multihost.git'
             }
         }
